--- a/css/app.css
+++ b/css/app.css
@@ -548,6 +548,7 @@ h1,h2,h3,h4,h5,p,span{
 }
 
 .indicator img{
+    height: 40px;
     transition: transform 0.8s;
 }
 
@@ -557,4 +558,14 @@ h1,h2,h3,h4,h5,p,span{
 
 .active img{
     transform: scale(1.3);
+}
+
+@media screen and (max-width: 992px) {
+    .indicator{
+        height: 20px !important;
+        width: 30px !important;
+    }
+    .indicator img{
+        height: 20px;
+    }
 }
