--- a/css/app.css
+++ b/css/app.css
@@ -69,7 +69,7 @@ h1,h2,h3,h4,h5,p,span{
 
 .cover{
     /* height:100%; */
-    background-color: gainsboro;
+    background-color: #666666;
     position: relative;
     margin-top: -5px;
     /* display: flex;
